Fix method