@@ -16,6 +16,7 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -43,7 +44,7 @@ public class ConversationServiceImpl implements ConversationService {
 
     List<ConversationInfoResponse> conversationInfoResponses = conversations.stream()
         .map(conversationMapper::mapToConversationInfoResponse)
-        .toList();
+        .collect(Collectors.toList());
 
     sortConversationInfoResponses(conversationInfoResponses);
 
